<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeDetailActivity">

    <LinearLayout
        android:id="@+id/linear_layout_recipe_detail_ingredients"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@color/secondaryBackground">

        <TextView
            android:id="@+id/text_view_recipe_detail_ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_title"
            android:textSize="30sp"
            android:textColor="@color/colorBlack" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_recipe_detail_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_recipe_detail_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" />

</LinearLayout>
