...
                android:layout_width="match_parent"
                android:layout_height="230dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_view_recipe_step_detail_description"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

...
